P0: 优化处理速度,先解决假等待和重复初始化
